--- a/app/src/main/res/layout/music_foot.xml
+++ b/app/src/main/res/layout/music_foot.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_gravity="center"
+    android:background="#00ffffff"
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
