--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#eeeeee">
+    android:background="@mipmap/music_background">
 
     <View
         android:background="@color/color_back_gui"
@@ -16,10 +16,8 @@
         android:id="@+id/music_list_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:cacheColorHint="#00000000"
-        android:background="#eeeeee"
         android:divider="#eeeeee"
-        android:listSelector="#000ff0"
+        android:listSelector="#0eeeeeee"
         android:layout_weight="1"/>
 
 
