--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -95,7 +95,8 @@
         android:layout_height="100dp">
         <include
             android:id="@+id/music_foot_top"
-            layout="@layout/music_foot"/>
+            layout="@layout/music_foot"
+            android:layout_height="112dp" />
     </FrameLayout>
 
 
