--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,8 @@
     <color name="color_search_blue">#025391</color>
     <color name="color_select_route_title">#D2025391</color>
 
+    <color name="password_textColor">#000000</color>
+
 
     <color name="result_view">#b0000000</color>
     <color name="viewfinder_mask">#60000000</color>
