--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -11,57 +11,73 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"/>
 
-    <!-- 支付宝支付 -->
-    <LinearLayout
-        android:id="@+id/pay_zhifubao_linear"
-        android:layout_width="fill_parent"
-        android:layout_marginTop="50dp"
-        android:layout_height="200dp"
-        android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/pay_activity_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <com.miss.imissyou.mycar.ui.RoundImageView
-            android:id="@+id/pay_zhifubao_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
-            android:src="@mipmap/zhifubao"
-            android:layout_weight="5"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="14dp"
-            android:gravity="center_horizontal"
-            android:text="支付宝支付"
-            android:textSize="20sp" />
+            <!-- 支付宝支付 -->
+            <LinearLayout
+                android:id="@+id/pay_zhifubao_linear"
+                android:layout_width="fill_parent"
+                android:layout_marginTop="50dp"
+                android:layout_height="200dp"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <com.miss.imissyou.mycar.ui.RoundImageView
+                    android:id="@+id/pay_zhifubao_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:gravity="center"
+                    android:src="@mipmap/zhifubao"
+                    android:layout_weight="5"/>
 
-    <!-- 微信支付 -->
-    <LinearLayout
-        android:id="@+id/pay_weixi_linear"
-        android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:orientation="vertical"
-        >
-        <com.miss.imissyou.mycar.ui.RoundImageView
-            android:id="@+id/pay_weixi_image"
-            android:layout_marginTop="50dp"
-            android:layout_width="100dp"
-            android:layout_gravity="center"
-            android:layout_height="100dp"
-            android:src="@mipmap/weixin"
-            android:layout_weight="5"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="14dp"
-            android:text="微信支付"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="14dp"
+                    android:gravity="center_horizontal"
+                    android:text="支付宝支付"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <!-- 微信支付 -->
+            <LinearLayout
+                android:id="@+id/pay_weixi_linear"
+                android:layout_width="fill_parent"
+                android:layout_height="200dp"
+                android:orientation="vertical">
+                <com.miss.imissyou.mycar.ui.RoundImageView
+                    android:id="@+id/pay_weixi_image"
+                    android:layout_marginTop="50dp"
+                    android:layout_width="100dp"
+                    android:layout_gravity="center"
+                    android:layout_height="100dp"
+                    android:src="@mipmap/weixin"
+                    android:layout_weight="5"/>
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="14dp"
+                    android:text="微信支付"
+                    android:textSize="20sp"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </FrameLayout>
+
+
 
 </LinearLayout>
