--- a/app/src/main/res/layout/music_foot.xml
+++ b/app/src/main/res/layout/music_foot.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_gravity="center"
     android:background="#00ffffff"
-    android:layout_height="100dp"
+    android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/music_foot_top"
         android:background="#00ffffff"
         android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_height="40dp"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -65,14 +65,20 @@
             </LinearLayout>
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_font_music"
+            android:layout_toLeftOf="@+id/btn_pause_music"
+            android:background="@mipmap/play_font_music"
+            android:layout_marginTop="25dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+
         <com.miss.imissyou.mycar.ui.CircleButton
             android:id="@+id/btn_pause_music"
-            android:layout_alignParentRight="true"
+            android:layout_toLeftOf="@+id/btn_next_music"
             app:cb_color="#ffffff"
             app:cb_pressedRingWidth="5dp"
             android:layout_gravity="bottom"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"
             android:layout_width="80dp"
             android:src="@mipmap/music_start"
@@ -80,5 +86,14 @@
             android:layout_height="80dp"
             android:adjustViewBounds="false"
             android:foregroundGravity="top" />
+
+        <Button
+            android:id="@+id/btn_next_music"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/play_next_music"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
 
 </RelativeLayout>
