--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="csy_tip_ts">14.0sp</dimen>
     <dimen name="csy_text_ts">16.0sp</dimen>
     <dimen name="csy_title_ts">18.0sp</dimen>
+
+    <dimen name="password_input">15dp</dimen>
+    <dimen name="input_navi_select">10dp</dimen>
 </resources>
